Completed the responsiveness issue with iOS and scrolling on small devices landscape mode

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -1,15 +1,21 @@
 img.catalog-img{
-  /* object-fit: contain; */
-  /* height: 70%; */
+  width: auto;
+  height: auto;
+}
+
+img.modal-img {
+  height: 100%;
 }
 
 img.cart-img{
   object-fit: contain;
-  height: 25vh;
+  width: auto;
+  height: auto;
 }
 
 .product-detail-modal {
   background-color: rgba(0, 0, 0, 0.4);
+  overflow-y: auto;
 }
 
 .back {
